<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.login.LoginFragment">

    <ImageView android:id="@+id/login_screen_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_0dp"
        android:padding="@dimen/value_50dp"
        app:srcCompat="@drawable/ic_logo_outline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_field_container"
        app:layout_constraintVertical_weight="3"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_field_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_0dp"
        android:background="@color/mifos_blue"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_screen_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_weight="7">

        <TextView android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/value_30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_text_input_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_margin="@dimen/value_15dp"
            style="@style/Widget.Design.TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_text_input_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:textSize="@dimen/value_20sp"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/white"
                android:drawableTint="@color/white"
                android:drawablePadding="@dimen/value_10dp"
                android:drawableLeft="@drawable/ic_account_circle"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_text_input_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_margin="@dimen/value_15dp"
            style="@style/Widget.Design.TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/user_text_input_lay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_text_input_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textSize="@dimen/value_20sp"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/white"
                android:drawableTint="@color/white"
                android:drawablePadding="@dimen/value_10dp"
                android:drawableLeft="@drawable/ic_lock"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_30dp"
            android:backgroundTint="@color/white"
            android:text="@string/log_in"
            android:textSize="@dimen/value_15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/pass_text_input_lay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_10dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up"
            android:textSize="@dimen/value_15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView android:id="@+id/forgot_pass_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_10dp"
            android:text="@string/forgot_your_password"
            android:textSize="@dimen/value_15sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/signup_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>